--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: traciex
-description: A new Flutter project.
+description: HealthX singapore project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+3
+version: 1.0.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -23,10 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.1
+  http: ^0.13.3
   toast: ^0.1.5
-  shared_preferences: ^0.5.11
-  encrypted_shared_preferences: ^1.0.7
+  shared_preferences: ^2.0.6
+  encrypted_shared_preferences: ^2.0.0
   qr_flutter: ^4.0.0
   time_formatter: ^1.0.0+5
   local_auth: ^1.1.5
@@ -34,15 +34,15 @@ dependencies:
   encrypt: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.3
   # if you are using latest flutter please update your flutter_svg package to ^0.18.*
-  flutter_svg: ^0.19.1 # help us to use SVG in our app
-  provider: ^4.3.1 # for State management
+  flutter_svg: ^0.22.0 # help us to use SVG in our app
+  provider: ^5.0.0 # for State management
   image_picker: ^0.7.4
   image_cropper: ^1.4.0
   qr_code_scanner: ^0.4.0
   country_icons: ^2.0.2
-  circular_countdown: ^2.0.0
+  circular_countdown: ^2.1.0
   poller: ^1.1.3
   flutter_socket_io: ^0.6.0
   dio: ^4.0.0
